--- a/requirements.txt
+++ b/requirements.txt
@@ -1,263 +1,5 @@
-absl-py==1.4.0
-aio-pika==8.2.3
-aiofiles==24.1.0
-aiogram==2.15
-aiohttp==3.9.5
-aiohttp-retry==2.9.1
-aiormq==6.4.2
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-APScheduler==3.9.1.post1
-asttokens==3.0.0
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==22.1.0
-babel==2.17.0
-bcrypt==4.3.0
-bidict==0.23.1
-blinker==1.9.0
-boto3==1.37.23
-botocore==1.37.23
-CacheControl==0.12.14
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.1
-colorama==0.4.6
-colorclass==2.2.2
-coloredlogs==15.0.1
-colorhash==1.2.1
-comm==0.2.2
-confluent-kafka==2.9.0
-contourpy==1.3.1
-cryptography==44.0.2
-cycler==0.12.1
-dask==2022.10.2
-dataclasses-json==0.6.7
-debugpy==1.8.13
-decorator==5.2.1
-distro==1.9.0
-dnspython==2.3.0
-docopt==0.6.2
-exceptiongroup==1.2.2
-executing==2.2.0
-faiss-cpu==1.10.0
-fastapi==0.115.12
-fbmessenger==6.0.0
-filelock==3.18.0
-fire==0.7.0
-Flask==3.1.0
-flask-cors==5.0.1
-Flask-SocketIO==5.5.1
-flatbuffers==25.2.10
-fonttools==4.56.0
-frozenlist==1.5.0
-fsspec==2025.3.0
-future==1.0.0
-gast==0.4.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.167.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.0.0
-google-generativeai==0.8.5
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-greenlet==3.1.1
-grpcio==1.71.0
-grpcio-status==1.71.0
-h11==0.14.0
-h5py==3.13.0
-httpcore==1.0.8
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.29.3
-humanfriendly==10.0
-idna==3.10
-ipykernel==6.29.5
-ipython==8.34.0
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.9.0
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch==1.33
-jsonpickle==3.0.4
-jsonpointer==3.0.0
-jsonschema==4.17.3
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-keras==3.9.2
-kiwisolver==1.4.8
-langchain==0.3.23
-langchain-community==0.3.21
-langchain-core==0.3.54
-langchain-experimental==0.3.4
-langchain-openai==0.3.14
-langchain-text-splitters==0.3.8
-langsmith==0.3.32
-libclang==18.1.1
-locket==1.0.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.5.3
-matplotlib-inline==0.1.7
-mattermostwrapper==2.2
-mdurl==0.1.2
-ml_dtypes==0.5.1
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==5.2.0
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.32.0
-nest-asyncio==1.6.0
-networkx==2.6.3
-numpy==1.26.4
-oauthlib==3.2.2
-openai==1.73.0
-opt_einsum==3.4.0
-optree==0.14.1
-orjson==3.10.16
-packaging==24.2
-pamqp==3.2.1
-pandas==2.2.3
-parso==0.8.4
-partd==1.4.2
-pillow==11.1.0
-platformdirs==4.3.7
-pluggy==1.5.0
-portalocker==2.10.1
-prompt-toolkit==3.0.28
-propcache==0.3.1
-proto-plus==1.26.1
-protobuf==5.29.4
-psutil==7.0.0
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.3
-pydantic-settings==2.9.1
-pydantic_core==2.33.1
-pydeck==0.9.1
-pydot==1.4.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pykwalify==1.8.0
-pymongo==4.3.3
-pyOpenSSL==25.0.0
-pyparsing==3.2.3
-pypdf==5.4.0
-PyPDF2==3.0.1
-pyreadline3==3.5.4
-pyrsistent==0.20.0
-python-crfsuite==0.9.11
-python-dateutil==2.8.2
-python-dotenv==1.1.0
-python-engineio==4.11.2
-python-multipart==0.0.20
-python-socketio==5.12.1
-pytz==2022.7.1
-pywin32==310
-PyYAML==6.0.2
-pyzmq==26.3.0
-questionary==1.10.0
-randomname==0.1.5
-rasa==3.6.21
-rasa-sdk==3.6.2
-redis==4.6.0
-referencing==0.36.2
-regex==2022.10.31
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rocketchat-API==1.30.0
-rpds-py==0.24.0
-rsa==4.9
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.12
-s3transfer==0.11.4
-safetensors==0.4.5
-sanic==21.12.2
-Sanic-Cors==2.0.1
-sanic-jwt==1.8.0
-sanic-routing==0.7.2
-scikit-learn==1.1.3
-scipy==1.10.1
-seaborn==0.13.2
-sentry-sdk==1.14.0
-simple-websocket==1.1.0
-six==1.17.0
-sklearn==0.0
-sklearn-crfsuite==0.3.6
-skops==0.9.0
-slack_sdk==3.35.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==1.4.54
-stack-data==0.6.3
-starlette==0.46.1
-streamlit==1.44.1
-structlog==23.3.0
-structlog-sentry==2.1.0
-sympy==1.13.3
-tabulate==0.9.0
-tarsafe==0.0.4
-tenacity==9.0.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-estimator==2.12.0
-tensorflow-hub==0.13.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-terminaltables==3.1.10
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-toml==0.10.2
-toolz==1.0.0
-torch==2.7.0
-torchvision==0.22.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-twilio==8.2.2
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing-utils==0.1.0
-typing_extensions==4.12.2
-tzdata==2025.2
-tzlocal==5.3.1
-ujson==5.10.0
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.0
-watchdog==6.0.0
-wcwidth==0.2.13
-webexteamssdk==1.6.1
-websockets==10.4
-Werkzeug==3.1.3
-wrapt==1.14.1
-wsproto==1.2.0
-yarl==1.18.3
-zstandard==0.23.0
+streamlit
+google-generativeai
+pandas
+scikit-learn
+PyPDF2
